membuat detailer dan card untuk detailer

--- a/main/templates/main.html
+++ b/main/templates/main.html
@@ -470,6 +470,4 @@
     </div>
     {% endif %} <!-- Close preference-history-section condition -->
 </div>
-
-{% endblock content %}
-
+{% endblock %}
