--- a/templates/base.html
+++ b/templates/base.html
@@ -6,9 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     {% block meta %} {% endblock meta %}
     <script src="https://cdn.tailwindcss.com"></script>
-    <link rel="stylesheet" href="{% static 'css/global.css' %}"/>
+    <link rel="stylesheet" href="{% static 'css/global.css' %}" />
   </head>
   <body>
-    {% block content %} {% endblock content %}
+    <!-- Navbar -->
+    {% include 'navbar.html' %}
+
+    <!-- Main Content -->
+    <div class="pt-[80px]">  <!-- Tambahkan padding agar tidak tertutup navbar -->
+      {% block content %} {% endblock content %}
+    </div>
   </body>
 </html>
