--- a/main/templates/recommendations.html
+++ b/main/templates/recommendations.html
@@ -277,7 +277,7 @@
             <div class="flex flex-wrap justify-center gap-4 mb-8">
                 <!-- Beji -->
                 <label class="relative">
-                    <input type="radio" name="district_category" value="beji" class="peer sr-only">
+                    <input type="radio" name="district_category" value="Beji" class="peer sr-only">
                     <div class="px-6 py-3 bg-white border-2 border-gray-200 rounded-full cursor-pointer transition-all hover:border-[#FF5B00] hover:shadow-md peer-checked:border-[#FF5B00] peer-checked:bg-[#FF5B00] peer-checked:text-white">
                         <span class="font-medium">Beji</span>
                     </div>
